# AdaEngine

./: .gitignore  CMakeLists.txt  LICENSE  SConstruct.py  main.cpp  next.txt
AdaEngine/: AdaEngine.sln  AdaEngine.vcxproj  AdaEngine.vcxproj.filters  Bind.h  bind.cpp  main.cpp  packages.config
AdaEngine/Component/head/: CameraComponent.h  Component.h  InputComponent.h  MeshComponent.h  MoveComponent.h  TransformComponent.h
AdaEngine/Component/source/: CameraComponent.cpp  InputComponent.cpp  MeshComponent.cpp  MoveComponent.cpp  TransformComponent.cpp
AdaEngine/Render/head/: DefalutMaterial.h  DefaultRenderPass.h  ForwardPineline.h  GPUResource.h  IRenderInterface.h  Material.h  MeshSource.h  OglRenderInterface.h  RenderInterfaceWrap.h  RenderPass.h  RenderPineline.h  RenderProxy.h  ShaderSource.h  TextureSource.h
AdaEngine/Render/source/: DefalutMaterial.cpp  DefalutRenderPass.cpp  ForwardPineline.cpp  IRenderInterface.cpp  Material.cpp  MeshSource.cpp  OglRenderInterface.cpp  RenderInterfaceWrap.cpp  RenderPass.cpp  RenderPineline.cpp  ShaderSource.cpp  TextureSource.cpp
AdaEngine/config/: Config.json
AdaEngine/core/head/: AdaMath.h  Application.h  (+10 more)
AdaEngine/test/: TestSceneMesh.cpp  TestSceneMesh.h
core/: CMakeLists.txt
core/head/: ClassDB.h  Engine.h  GLContext.h  Main.h  MainLoop.cpp  MainLoop.h  Object.h
core/source/: ClassDB.cpp  Engine.cpp  GLContext.cpp  Main.cpp  MainLoop.cpp  Object.cpp
doc/: python和引擎交互.txt  依赖.txt  场景和资源管理.txt
main/: SCsub  main.cpp
scene/: CMakeLists.txt
scene/head/: SceneTree.h
scene/source/: SceneTree.cpp
(+54 files in other folders)
